[gd_scene load_steps=17 format=1]

[ext_resource path="res://fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ChangePasswordScreen.gd" type="Script" id=2]
[ext_resource path="res://images/GUI/backdrop1.png" type="Texture" id=3]
[ext_resource path="res://images/GUI/startscreen.png" type="Texture" id=4]
[ext_resource path="res://images/GUI/borderCenter.png" type="Texture" id=5]
[ext_resource path="res://images/GUI/buttonOver.png" type="Texture" id=6]
[ext_resource path="res://images/GUI/buttonDown.png" type="Texture" id=7]
[ext_resource path="res://images/GUI/buttonUp.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 1 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 7 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="ChangePasswordScreen" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 2 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 60.0
margin/right = 640.0
margin/bottom = 520.0
custom_styles/panel = SubResource( 3 )

[node name="ChangePasswordLabel" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 50.0
margin/right = 520.0
margin/bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CHANGE_PASSWORD"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="UsernameLabel" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 100.0
margin/right = 175.0
margin/bottom = 125.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "USERNAME"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Username" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 100.0
margin/right = 510.0
margin/bottom = 125.0
custom_styles/normal = SubResource( 4 )
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="OldPasswordLabel" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 140.0
margin/right = 211.0
margin/bottom = 165.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OLD_PASSWORD"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OldPassword" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 140.0
margin/right = 510.0
margin/bottom = 165.0
custom_styles/normal = SubResource( 4 )
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="NewPasswordLabel" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 180.0
margin/right = 224.0
margin/bottom = 205.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NEW_PASSWORD"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NewPassword" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 180.0
margin/right = 510.0
margin/bottom = 205.0
custom_styles/normal = SubResource( 4 )
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="ConfirmPasswordLabel" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 220.0
margin/right = 263.0
margin/bottom = 245.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONFIRM_PASSWORD"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ConfirmPassword" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 220.0
margin/right = 510.0
margin/bottom = 245.0
custom_styles/normal = SubResource( 4 )
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="BackButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 380.0
margin/right = 230.0
margin/bottom = 411.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[node name="ConfirmButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 380.0
margin/right = 510.0
margin/bottom = 411.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "CONFIRM"
flat = false

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="Panel/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]


